--- a/MXBikesSetupDuperWPF/MainWindow.xaml
+++ b/MXBikesSetupDuperWPF/MainWindow.xaml
@@ -15,47 +15,56 @@
                     <TextBlock Style="{StaticResource HeaderTextBlockStyle}" ><Run Language="de-de" Text="MX Bikes Setup Duper"/></TextBlock>
                     <Border BorderThickness="1,1,1,1" CornerRadius="10,10,10,10" BorderBrush="#FF8C8C8C" Padding="5,5,5,5">
                         <StackPanel>
-                            <UniformGrid x:Name="panel_source" Rows="2" Columns="2" >
+                            <UniformGrid x:Name="panel_source" Rows="3" Columns="2" >
                                 <StackPanel x:Name="panel_profile" Margin="0,0,5,10">
-                                    <Label x:Name="label" Content="Select Profile test 1234" Margin="0,0,0,10"/>
-                                    <ComboBox x:Name="sourceProfile" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+                                    <Label x:Name="label" Content="Select Profile" Margin="0,0,0,10"/>
+                                    <ComboBox x:Name="cbSourceProfile" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" SelectionChanged="cbSourceProfile_SelectionChanged" IsReadOnly="True" Text="0 profiles found" IsEditable="True" SelectedValuePath="Content"/>
                                 </StackPanel>
                                 <StackPanel x:Name="panel_source_track" VerticalAlignment="Center" Margin="5,0,0,10">
-                                    <Label x:Name="label2" Content="Select Source Track" Margin="0,0,0,10"/>
-                                    <ComboBox x:Name="sourceTrack" HorizontalAlignment="Stretch"/>
+                                    <StackPanel Orientation="Horizontal" Margin="0,0,0,10">
+                                        <Label Content="Select Source Track"/>
+                                        <Label Content="(newest on top)" Margin="5,0,0,0" FontSize="10" VerticalAlignment="Center"/>
+                                    </StackPanel>
+                                    <ComboBox x:Name="cbSourceTrack" HorizontalAlignment="Stretch" IsEnabled="False" SelectedValuePath="Content" SelectionChanged="cbSourceTrack_SelectionChanged"/>
                                 </StackPanel>
                                 <StackPanel Margin="0,0,5,0">
                                     <Label x:Name="label3" Content="Select Bike" Margin="0,0,0,10"/>
-                                    <ComboBox x:Name="sourceBike" HorizontalAlignment="Stretch"/>
+                                    <ComboBox x:Name="cbSourceBike" HorizontalAlignment="Stretch" IsTextSearchCaseSensitive="True" IsEditable="True" SelectedValuePath="Content" IsEnabled="False" SelectionChanged="cbSourceBike_SelectionChanged"/>
                                 </StackPanel>
                                 <StackPanel Margin="5,0,0,0">
-                                    <Label x:Name="label4" Content="Select Setup" Margin="0,0,0,10"/>
-                                    <ComboBox x:Name="sourceSetup" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+                                    <StackPanel Orientation="Horizontal" Margin="0,0,0,10">
+                                        <Label Content="Select Setup"/>
+                                        <Label Content="(newest on top)" Margin="5,0,0,0" FontSize="10" VerticalAlignment="Center"/>
+                                    </StackPanel>
+                                    <ComboBox x:Name="cbSourceSetup" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" IsEnabled="False" SelectedValuePath="Content" SelectionChanged="cbSourceSetup_SelectionChanged"/>
+                                </StackPanel>
+                                <Grid>
+                                    <Button x:Name="btnReload" Content="Reload" VerticalAlignment="Bottom" Click="btnReload_Click"/>
+                                </Grid>
+                                <StackPanel x:Name="panel_setup_info" IsEnabled="False" HorizontalAlignment="Right" Width="325">
+                                    <Label x:Name="label6" Content="Setup Info" Margin="0,0,0,10"/>
+                                    <StackPanel Orientation="Horizontal">
+                                        <Label Content="Created:&#xA;Last Changed:" Width="100"/>
+                                        <Label x:Name="lblSetupInfo" Content=""/>
+                                    </StackPanel>
                                 </StackPanel>
                             </UniformGrid>
-                            <StackPanel x:Name="panel_setup_info" IsEnabled="False" HorizontalAlignment="Right" Width="325">
-                                <Label x:Name="label6" Content="Setup Info" Margin="0,0,0,10"/>
-                                <StackPanel Orientation="Horizontal">
-                                    <Label Content="Created:&#xD;&#xA;Last Changed:" Width="100"/>
-                                    <Label x:Name="lblSetupInfo" Content=""/>
-                                </StackPanel>
-                            </StackPanel>
                         </StackPanel>
                     </Border>
                     <Border BorderThickness="1,1,1,1" CornerRadius="10,10,10,10" BorderBrush="#FF8C8C8C" Padding="5,5,5,5">
                         <DockPanel>
                             <StackPanel Orientation="Vertical" Margin="0,0,10,0" Width="150">
                                 <Label x:Name="label5" Content="Copy Mode" Margin="0,0,0,10"/>
-                                <RadioButton x:Name="rdSpecificTrack" Content="Specific Track" HorizontalAlignment="Stretch"/>
-                                <RadioButton x:Name="rdAllTracks" Content="All Tracks" HorizontalAlignment="Stretch"/>
+                                <RadioButton x:Name="rdSpecificTrack" Content="Specific Track" HorizontalAlignment="Stretch" Checked="rdSpecificTrack_Checked"/>
+                                <RadioButton x:Name="rdAllTracks" Content="All Tracks" HorizontalAlignment="Stretch" Checked="rdAllTracks_Checked"/>
                             </StackPanel>
                             <StackPanel Orientation="Vertical" Width="325">
                                 <Label x:Name="label7" Content="Select Target Track" Margin="0,0,0,10"/>
-                                <ComboBox x:Name="targetTrack" HorizontalAlignment="Stretch"/>
+                                <ComboBox x:Name="cbTargetTrack" HorizontalAlignment="Stretch" IsEnabled="False" IsEditable="True"/>
                             </StackPanel>
                             <StackPanel Orientation="Vertical" DockPanel.Dock="Right" Margin="10,0,0,0">
                                 <Label x:Name="label8" Content="Action" Margin="0,0,0,10"/>
-                                <Button x:Name="btnCopy" Content="Copy" HorizontalAlignment="Stretch"/>
+                                <Button x:Name="btnCopy" Content="Copy" HorizontalAlignment="Stretch" Click="btnCopy_Click"/>
                             </StackPanel>
                         </DockPanel>
                     </Border>
