--- a/MXBikesSetupDuperWPF/MainWindow.xaml
+++ b/MXBikesSetupDuperWPF/MainWindow.xaml
@@ -79,9 +79,9 @@
                         <Image x:Name="image" Height="100" Width="100" Source="/logo_2021_512.png" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                     </ui:SimpleStackPanel>
                     <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" DockPanel.Dock="Bottom" HorizontalAlignment="Right">
-                        <Label x:Name="label2" Content="Version: " Initialized="label2_Initialized" Loaded="label2_Loaded" VerticalAlignment="Bottom"/>
+                        <TextBlock x:Name="lblVersionType" TextWrapping="Wrap" Margin="0,0,5,0" VerticalAlignment="Center"><Run Language="de-de" Text="Pre-Release"/></TextBlock>
+                        <TextBox x:Name="lblVersion" TextWrapping="Wrap" IsReadOnly="True" Loaded="lblVersion_Loaded" Text="VERSION" Padding="10,5,10,6"/>
                         <Button x:Name="btnGetLatestVersion" Content="Get latest version" Margin="5,0,0,0" Click="btnGetLatestVersion_Click"/>
-
                     </StackPanel>
                 </DockPanel>
             </TabItem>
